# autoticket

./: .coverage  .env.example  .gitignore  CLAUDE.md  JIRA_TASK_AGENT_DEMO.md  JIRA_TASK_AGENT_EMAIL.txt  JIRA_TASK_AGENT_IMPLEMENTATION_PLAN.md  JIRA_TASK_AGENT_OVERVIEW.md  PIPELINE_FLOW.md  README.md  jira-comment.sh  provider-jira.sh  pyproject.toml  pytest.ini  requirements.txt  state.json  state.json.bak  state.json.bak1  state.json.bak2  team_mapping.json
.claude/: settings.local.json
configs/: default.yaml  example.user.yaml  f2j.yaml  jira_task_agent.yaml  shared.yaml  team_mapping.yaml  user_map.yaml
docs/: USER_GUIDE.md  cross_platform_plan.md  file_to_jira.md  file_to_jira_project_summary.md  file_to_jira_troubleshooting.md  jira_task_agent.md  stage_3_plan.md
examples/: README.md
jira_task_agent/: __main__.py  cache.py  runner.py  state.py
jira_task_agent/drive/: client.py
jira_task_agent/jira/: client.py
jira_task_agent/llm/: client.py
jira_task_agent/llm/prompts/: classifier.txt  extractor.md  extractor.txt  extractor_diff.md  extractor_diff_aware.txt  extractor_multi.md  extractor_targeted.md  matcher.md  matcher.txt  summarizer.md
jira_task_agent/llm/prompts/extract/: single.md  targeted.md
jira_task_agent/pipeline/: anchor_locator.py  chunker.py  classifier.py  commenter.py  extractor.py  file_extract.py  file_match.py  matcher.py  preserve_state.py  reconciler.py  run_plan_md.py
prompts/file_to_jira/: enrichment_system.md
scripts/: classify_files.py  debug_parse.py  extract_one.py  list_epic_tree.py  list_epics.py  list_files.py  list_project_tree.py  make_sample_state.py  smoke_drive_capture.py  smoke_jira_write.py
src/_shared/: __init__.py  process_lock.py
src/_shared/config/: __init__.py  settings.py  workspace.py
src/_shared/io/: __init__.py
src/_shared/llm/: __init__.py  anthropic_provider.py  base.py  openai_compat.py  registry.py
src/file_to_jira/: __init__.py  __main__.py  cli.py  config.py  input.py  inspect_view.py  logging.py  upload.py  upload_payload.py
src/file_to_jira/enrich/: __init__.py  agent.py  agent_openai.py  cost.py  failure_class.py  linter.py  orchestrator.py
src/file_to_jira/jira/: __init__.py  client.py  field_map.py  uploader.py  user_resolver.py
src/file_to_jira/models/: __init__.py  bug.py  intermediate.py
src/file_to_jira/parse/: __init__.py  markdown_parser.py  schema.py
src/file_to_jira/repocache/: __init__.py  manager.py
src/file_to_jira/state/: __init__.py  store.py
src/file_to_jira/util/: ids.py  proc.py
src/jira_task_agent/: __init__.py  __main__.py  runner.py
src/jira_task_agent/drive/: client.py
src/jira_task_agent/jira/: client.py  project_tree.py
src/jira_task_agent/llm/: client.py
src/jira_task_agent/pipeline/: classifier.py  commenter.py  context_bundler.py  dedupe.py  dirty_filter.py  extractor.py  file_extract.py  file_match.py  matcher.py  reconciler.py  run_plan_md.py
tests/: conftest.py  test_anchor_locator.py  test_cache.py  test_chunker.py  test_dod_preserve_live.py  test_extractor_diff_aware_unit.py  test_extractor_integration.py  test_file_extract_unit.py  test_file_match_unit.py  test_helpers.py  test_local_e2e_md_live.py  test_matcher_grouped_unit.py  test_matcher_real_data.py  test_matcher_real_data_orchestrator.py  test_matcher_unit.py  test_may1_full_pipeline_live.py  test_may1_match_dirty_live.py  test_may1_run_plan_md_live.py  test_mixed_warm_and_new_live.py  test_reconciler_logical.py  test_run_plan_md_unit.py
tests/_shared/: test_config_settings.py  test_from_settings.py  test_process_lock.py  test_workspace.py
tests/_shared/llm/: test_providers.py
tests/file_to_jira/: conftest.py  test_agent.py  test_agent_openai.py  test_cli_jira_repoint.py  test_cost.py  test_failure_class.py  test_ids.py  test_jira.py  test_models.py  test_parser.py  test_repo_cache.py  test_submit.py  test_toolkit.py  test_upload_payload.py
tests/fixtures/: git_repo.py
tests/jira_task_agent/: conftest.py  test_cache.py  test_classifier_integration.py  test_cmd_run_guards.py  test_dod_preserve_live.py  test_drive_shim_removed.py  test_file_extract_unit.py  test_file_match_unit.py  test_helpers.py  test_llm_models_yaml.py  test_local_e2e_md_live.py  test_local_source_unit.py  test_matcher_integration.py  test_matcher_real_data.py  test_matcher_real_data_orchestrator.py  test_may1_extract_diff_live.py  test_may1_full_pipeline_live.py  test_may1_match_dirty_live.py  test_may1_run_plan_md_live.py  test_mixed_warm_and_new_live.py  test_preserve_state_unit.py  test_reconciler_logical.py  test_runner_apply_unit.py  test_runner_cache_live.py  test_warm_scenarios_live.py
tests/unit/: test_agent.py  test_agent_openai.py  test_linter.py  test_repo_cache.py  test_state_store.py  test_toolkit.py
(+33 files in other folders)
